Fix heading names
Using names suffixed with numbers not aligned to the underlying HTML was confusing to users.

--- a/src/components/Heading/index.css
+++ b/src/components/Heading/index.css
@@ -1,8 +1,8 @@
 @import "../../custom-properties.css";
 
-/** @define HeadingOne; */
+/** @define Heading; */
 
-.HeadingOne {
+.Heading {
   font: 600 var(--type-5)/2rem Nova, sans-serif;
 
   &:not(:first-child) {
